@@ -1,3 +1,8 @@
+2020-01-30  Akira Kakuto  <kakuto@w32tex.org>
+
+	* bitmapenc.c: use strchr() instead of index(), because index()
+	is not supported in Visual Studio 2010.
+
 2020-01-29  Tomas Rokicki  <rokicki@gmail.com>
 	
 	* bitmapenc.c (struct bmenc): new member existsbm.
